# agentlantern

./: .gitignore  LICENSE  README.md  USAGE.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: docs.yml
docs/: api.md  changelog.md  examples.md  faq.md  guide.md  index.md  installation.md  lantern-docs.md  linter.md  local-docs.md  play.md  quick-start.md  usage.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/lint/: json-ci.md  rules.md  running.md  troubleshooting.md
docs/play/: interface.md  layouts.md  quick-start.md  reference.md  replay.md  tool-hub.md  troubleshooting.md
src/agentlantern/: __init__.py  __main__.py  cli.py  docs.py  inspect.py  lint.py  play.py  web.py
src/agentlantern/core/: base.py  pyproject.py
src/agentlantern/frameworks/: registry.py
src/agentlantern/frameworks/autogen/: analyzer.py
src/agentlantern/frameworks/crewai/: analyzer.py  linter.py  play_hooks.py  renderer.py
src/agentlantern/frameworks/google_adk/: analyzer.py  renderer.py
src/agentlantern/frameworks/langgraph/: analyzer.py
src/agentlantern/frameworks/smolagents/: analyzer.py
src/agentlantern/play_ui/: index.html
